<resources>
    <string name="app_name">So many Salads!</string>
    <string name="login_with_google">Login with Google</string>
    <string name="login_heading">Sign up now to order your first fresh salad!</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="connection_failed">Connection Failed</string>
    <string name="logout">Logout</string>
    <string name="login_with_twitter">Login with Twitter</string>
    <string name="login_anonymous">Continue without signing in</string>
    <string name="home_heading">Welcome to 365 Salads</string>
    <string name="buy">Buy something</string>
    <string name="com.twitter.sdk.android.CONSUMER_KEY">WeXethiaSP8sFWXBITxDnv9Tk</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">l4LnU5nMRH0ROY05LG4TuK8GFd1bwQtk9QrvRP9JvSRUHyxWjR</string>
    <string name="invitation_title">Check out this rad salad</string>
    <string name="invitation_cta">Check it out!</string>
    <string name="filter_view_http_salads">Show Salad</string>
    <string name="filter_view_kan_salads">Show Salad</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. \t\tIn mollis est vitae erat laoreet consectetur. Mauris dui mauris, \t\tdictum vel egestas vel, porta sed ante. Phasellus congue viverra ipsum, \t\tin elementum arcu ultricies nec.Morbi tincidunt nisl lacinia, placerat nisi eget, luctus tortor. \t\tMorbi efficitur dictum leo, sit amet volutpat lorem sodales nec. Quisque et erat et turpis fringilla condimentum. \t\tLorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris auctor vulputate libero vitae iaculis. \t\tCurabitur id blandit quam. Praesent massa ante, pulvinar vitae sagittis commodo, scelerisque porttitor eros. \t\tMauris suscipit a enim nec congue. Mauris tristique cursus aliquet. Nunc quis hendrerit nunc. Praesent tristique tellus purus, \t\ta pretium ex gravida id. Cras laoreet malesuada nulla, at bibendum metus ultricies a. Fusce eu ornare arcu. Proin ut molestie est. \t\tVestibulum quis vehicula erat. Nam sed tempus nibh. Sed tortor ante, maximus venenatis odio sed, ultricies maximus lectus. \t\tAliquam sed volutpat ligula. Integer bibendum, magna ac lacinia suscipit, \t\trisus libero rutrum justo, sed tempus augue tellus eget est. Curabitur convallis augue nisl, \t\tid efficitur urna posuere faucibus. Ut sed egestas nulla, eu finibus metus. Nunc a arcu ante. \t\tAenean ullamcorper dolor non condimentum congue. Aenean mauris nunc, pellentesque at placerat vitae, \t\taliquet quis orci. Curabitur maximus augue ut bibendum sagittis.</string>

    <string name="config_host" translatable="false">365salads.xyz</string>
    <string name="config_path_salads" translatable="false">salads</string>
    <string name="config_scheme" translatable="false">http</string>

</resources>
