<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivityLoginLoginTwitterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:paddingBottom="32dp">

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:drawableTop="@drawable/firebase_auth_120dp"
                android:text="@string/login_heading" />

            <TextView
                android:id="@+id/text_log"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />

            <Button
                android:id="@+id/button_login_with_google"
                style="@style/Salads.Button.Login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/google"
                android:drawableLeft="@drawable/google"
                android:text="@string/login_with_google" />

            <Button
                android:id="@+id/button_login_with_facebook"
                style="@style/Salads.Button.Login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/facebook"
                android:drawableLeft="@drawable/facebook"
                android:text="@string/login_with_facebook" />

            <!--<com.twitter.sdk.android.core.identity.TwitterLoginButton-->
                <!--android:id="@+id/button_login_with_twitter"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_margin="8dp" />-->
            <!---->
            <Button
                android:id="@+id/button_login_with_twitter"
                style="@style/Salads.Button.Login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/twitter"
                android:drawableLeft="@drawable/twitter"
                android:text="@string/login_with_twitter" />

            <Button
                android:id="@+id/button_login_anonymous"
                style="@style/Salads.Button.Login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey"
                android:text="@string/login_anonymous" />

            <Button
                android:id="@+id/button_logout"
                style="@style/Salads.Button.Login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:visibility="gone" />

        </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>